// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`IPC message snapshots ClientMessage types user_message serializes to expected JSON 1`] = `
{
  "content": "Hello, assistant!",
  "sessionId": "sess-001",
  "type": "user_message",
}
`;

exports[`IPC message snapshots ClientMessage types confirmation_response serializes to expected JSON 1`] = `
{
  "decision": "allow",
  "requestId": "req-001",
  "selectedPattern": "bash:npm *",
  "selectedScope": "/projects/my-app",
  "type": "confirmation_response",
}
`;

exports[`IPC message snapshots ClientMessage types session_list serializes to expected JSON 1`] = `
{
  "type": "session_list",
}
`;

exports[`IPC message snapshots ClientMessage types session_create serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "title": "New session",
  "type": "session_create",
}
`;

exports[`IPC message snapshots ClientMessage types session_switch serializes to expected JSON 1`] = `
{
  "sessionId": "sess-002",
  "type": "session_switch",
}
`;

exports[`IPC message snapshots ClientMessage types ping serializes to expected JSON 1`] = `
{
  "type": "ping",
}
`;

exports[`IPC message snapshots ClientMessage types cancel serializes to expected JSON 1`] = `
{
  "type": "cancel",
}
`;

exports[`IPC message snapshots ClientMessage types model_get serializes to expected JSON 1`] = `
{
  "type": "model_get",
}
`;

exports[`IPC message snapshots ClientMessage types model_set serializes to expected JSON 1`] = `
{
  "model": "claude-sonnet-4-5-20250929",
  "type": "model_set",
}
`;

exports[`IPC message snapshots ClientMessage types history_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "history_request",
}
`;

exports[`IPC message snapshots ClientMessage types undo serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "undo",
}
`;

exports[`IPC message snapshots ClientMessage types usage_request serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "usage_request",
}
`;

exports[`IPC message snapshots ClientMessage types sandbox_set serializes to expected JSON 1`] = `
{
  "enabled": true,
  "type": "sandbox_set",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_create serializes to expected JSON 1`] = `
{
  "screenHeight": 1080,
  "screenWidth": 1920,
  "sessionId": "cu-sess-001",
  "task": "Open Safari and search for weather",
  "type": "cu_session_create",
}
`;

exports[`IPC message snapshots ClientMessage types cu_session_abort serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "type": "cu_session_abort",
}
`;

exports[`IPC message snapshots ClientMessage types cu_observation serializes to expected JSON 1`] = `
{
  "axDiff": "+ new element",
  "axTree": "<ax-tree>...</ax-tree>",
  "executionResult": "click completed",
  "screenshot": "base64-screenshot-data",
  "secondaryWindows": "Finder, Terminal",
  "sessionId": "cu-sess-001",
  "type": "cu_observation",
}
`;

exports[`IPC message snapshots ClientMessage types ambient_observation serializes to expected JSON 1`] = `
{
  "appName": "Safari",
  "ocrText": "Hello world visible on screen",
  "requestId": "req-amb-001",
  "timestamp": 1700000000,
  "type": "ambient_observation",
  "windowTitle": "Google",
}
`;

exports[`IPC message snapshots ClientMessage types task_submit serializes to expected JSON 1`] = `
{
  "screenHeight": 1080,
  "screenWidth": 1920,
  "task": "Open Safari and search for weather",
  "type": "task_submit",
}
`;

exports[`IPC message snapshots ClientMessage types ui_surface_action serializes to expected JSON 1`] = `
{
  "actionId": "btn-ok",
  "data": {
    "selectedItem": "item-1",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_action",
}
`;

exports[`IPC message snapshots ClientMessage types app_data_request serializes to expected JSON 1`] = `
{
  "appId": "app-001",
  "callId": "call-001",
  "method": "query",
  "surfaceId": "surface-001",
  "type": "app_data_request",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_text_delta serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "text": "Here is some output",
  "type": "assistant_text_delta",
}
`;

exports[`IPC message snapshots ServerMessage types assistant_thinking_delta serializes to expected JSON 1`] = `
{
  "thinking": "Let me consider this...",
  "type": "assistant_thinking_delta",
}
`;

exports[`IPC message snapshots ServerMessage types tool_use_start serializes to expected JSON 1`] = `
{
  "input": {
    "command": "ls -la",
  },
  "toolName": "bash",
  "type": "tool_use_start",
}
`;

exports[`IPC message snapshots ServerMessage types tool_output_chunk serializes to expected JSON 1`] = `
{
  "chunk": 
"file1.ts
file2.ts
"
,
  "type": "tool_output_chunk",
}
`;

exports[`IPC message snapshots ServerMessage types tool_result serializes to expected JSON 1`] = `
{
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "const x = 2;",
    "oldContent": "const x = 1;",
  },
  "isError": false,
  "result": "Command completed successfully",
  "status": "success",
  "toolName": "bash",
  "type": "tool_result",
}
`;

exports[`IPC message snapshots ServerMessage types confirmation_request serializes to expected JSON 1`] = `
{
  "allowlistOptions": [
    {
      "label": "Allow rm commands",
      "pattern": "bash:rm *",
    },
  ],
  "diff": {
    "filePath": "/tmp/test.ts",
    "isNewFile": false,
    "newContent": "new",
    "oldContent": "old",
  },
  "input": {
    "command": "rm -rf /tmp/test",
  },
  "requestId": "req-002",
  "riskLevel": "high",
  "sandboxed": false,
  "scopeOptions": [
    {
      "label": "In /tmp",
      "scope": "/tmp",
    },
  ],
  "toolName": "bash",
  "type": "confirmation_request",
}
`;

exports[`IPC message snapshots ServerMessage types message_complete serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "type": "message_complete",
}
`;

exports[`IPC message snapshots ServerMessage types session_info serializes to expected JSON 1`] = `
{
  "correlationId": "corr-001",
  "sessionId": "sess-001",
  "title": "My session",
  "type": "session_info",
}
`;

exports[`IPC message snapshots ServerMessage types session_list_response serializes to expected JSON 1`] = `
{
  "sessions": [
    {
      "id": "sess-001",
      "title": "First session",
      "updatedAt": 1700000000,
    },
    {
      "id": "sess-002",
      "title": "Second session",
      "updatedAt": 1700001000,
    },
  ],
  "type": "session_list_response",
}
`;

exports[`IPC message snapshots ServerMessage types error serializes to expected JSON 1`] = `
{
  "message": "Something went wrong",
  "type": "error",
}
`;

exports[`IPC message snapshots ServerMessage types pong serializes to expected JSON 1`] = `
{
  "type": "pong",
}
`;

exports[`IPC message snapshots ServerMessage types generation_cancelled serializes to expected JSON 1`] = `
{
  "type": "generation_cancelled",
}
`;

exports[`IPC message snapshots ServerMessage types generation_handoff serializes to expected JSON 1`] = `
{
  "queuedCount": 2,
  "requestId": "req-handoff-001",
  "sessionId": "sess-001",
  "type": "generation_handoff",
}
`;

exports[`IPC message snapshots ServerMessage types model_info serializes to expected JSON 1`] = `
{
  "model": "claude-sonnet-4-5-20250929",
  "provider": "anthropic",
  "type": "model_info",
}
`;

exports[`IPC message snapshots ServerMessage types history_response serializes to expected JSON 1`] = `
{
  "messages": [
    {
      "role": "user",
      "text": "Hello",
      "timestamp": 1700000000,
    },
    {
      "role": "assistant",
      "text": "Hi there!",
      "timestamp": 1700000001,
    },
  ],
  "type": "history_response",
}
`;

exports[`IPC message snapshots ServerMessage types undo_complete serializes to expected JSON 1`] = `
{
  "removedCount": 2,
  "type": "undo_complete",
}
`;

exports[`IPC message snapshots ServerMessage types usage_update serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "inputTokens": 150,
  "model": "claude-sonnet-4-5-20250929",
  "outputTokens": 50,
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_update",
}
`;

exports[`IPC message snapshots ServerMessage types usage_response serializes to expected JSON 1`] = `
{
  "estimatedCost": 0.025,
  "model": "claude-sonnet-4-5-20250929",
  "totalInputTokens": 1500,
  "totalOutputTokens": 500,
  "type": "usage_response",
}
`;

exports[`IPC message snapshots ServerMessage types context_compacted serializes to expected JSON 1`] = `
{
  "compactedMessages": 56,
  "estimatedInputTokens": 108000,
  "maxInputTokens": 180000,
  "previousEstimatedInputTokens": 220000,
  "summaryCalls": 3,
  "summaryInputTokens": 4200,
  "summaryModel": "claude-sonnet-4-5-20250929",
  "summaryOutputTokens": 900,
  "thresholdTokens": 144000,
  "type": "context_compacted",
}
`;

exports[`IPC message snapshots ServerMessage types secret_detected serializes to expected JSON 1`] = `
{
  "action": "redact",
  "matches": [
    {
      "redactedValue": "sk-****abcd",
      "type": "api_key",
    },
  ],
  "toolName": "bash",
  "type": "secret_detected",
}
`;

exports[`IPC message snapshots ServerMessage types memory_recalled serializes to expected JSON 1`] = `
{
  "injectedTokens": 480,
  "latencyMs": 55,
  "lexicalHits": 12,
  "model": "text-embedding-3-small",
  "provider": "openai",
  "recencyHits": 6,
  "semanticHits": 8,
  "type": "memory_recalled",
}
`;

exports[`IPC message snapshots ServerMessage types memory_status serializes to expected JSON 1`] = `
{
  "degraded": false,
  "enabled": true,
  "model": "text-embedding-3-small",
  "provider": "openai",
  "type": "memory_status",
}
`;

exports[`IPC message snapshots ServerMessage types cu_action serializes to expected JSON 1`] = `
{
  "input": {
    "x": 100,
    "y": 200,
  },
  "reasoning": "Clicking the search button",
  "sessionId": "cu-sess-001",
  "stepNumber": 1,
  "toolName": "click",
  "type": "cu_action",
}
`;

exports[`IPC message snapshots ServerMessage types cu_complete serializes to expected JSON 1`] = `
{
  "sessionId": "cu-sess-001",
  "stepCount": 5,
  "summary": "Successfully opened Safari and searched for weather",
  "type": "cu_complete",
}
`;

exports[`IPC message snapshots ServerMessage types cu_error serializes to expected JSON 1`] = `
{
  "message": "Session timed out after 30 steps",
  "sessionId": "cu-sess-001",
  "type": "cu_error",
}
`;

exports[`IPC message snapshots ServerMessage types task_routed serializes to expected JSON 1`] = `
{
  "interactionType": "computer_use",
  "sessionId": "sess-routed-001",
  "type": "task_routed",
}
`;

exports[`IPC message snapshots ServerMessage types ambient_result serializes to expected JSON 1`] = `
{
  "decision": "suggest",
  "requestId": "req-amb-001",
  "suggestion": "Try running the test with --verbose flag for more details",
  "summary": "User appears to be debugging a test failure",
  "type": "ambient_result",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_show serializes to expected JSON 1`] = `
{
  "actions": [
    {
      "id": "dismiss",
      "label": "OK",
      "style": "primary",
    },
  ],
  "data": {
    "body": "All tests passed.",
    "title": "Build Complete",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "surfaceType": "card",
  "title": "Status Update",
  "type": "ui_surface_show",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_update serializes to expected JSON 1`] = `
{
  "data": {
    "body": "Updated body text.",
  },
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_update",
}
`;

exports[`IPC message snapshots ServerMessage types ui_surface_dismiss serializes to expected JSON 1`] = `
{
  "sessionId": "sess-001",
  "surfaceId": "surface-001",
  "type": "ui_surface_dismiss",
}
`;

exports[`IPC message snapshots ServerMessage types app_data_response serializes to expected JSON 1`] = `
{
  "callId": "call-001",
  "result": [
    {
      "appId": "app-001",
      "createdAt": 1700000000,
      "data": {
        "name": "Test",
      },
      "id": "rec-001",
      "updatedAt": 1700000000,
    },
  ],
  "success": true,
  "surfaceId": "surface-001",
  "type": "app_data_response",
}
`;

exports[`IPC message snapshots ServerMessage types message_queued serializes to expected JSON 1`] = `
{
  "position": 1,
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_queued",
}
`;

exports[`IPC message snapshots ServerMessage types message_dequeued serializes to expected JSON 1`] = `
{
  "requestId": "req-queue-001",
  "sessionId": "sess-001",
  "type": "message_dequeued",
}
`;
